--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,14 @@
         }
     ],
     "require": {
+        "ext-json": "*",
         "slim/psr7": "^1.2",
         "nyholm/psr7": "^1.3",
         "nyholm/psr7-server": "^1.0",
         "slim/slim": "4.*",
         "doctrine/dbal": "^2.10",
-        "php-di/php-di": "^6.2"
+        "php-di/php-di": "^6.2",
+        "guzzlehttp/guzzle": "^7.1"
     },
     "autoload": {
         "psr-4": {
